Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ repetitions = 1000
 <tr>
 <td>kinship_output_file</td>
 <td>Kinship_Output_File.txt</td>
-<td>User defined output text file name</td>
+<td>User defined output file name</td>
 <td>Creates a lod score table output file</td>
 </tr>
 <tr>
