Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ repetitions = 1000
 <td>kinship_output_file</td>
 <td>Kinship_Output_File.txt</td>
 <td>User defined output file name</td>
-<td>Creates a lod score table output file</td>
+<td>OpenMendel generated lod score table output file</td>
 </tr>
 <tr>
 <td>repetitions</td>
