Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ repetitions = 1000
 </tr>
 <tr>
 <td>repetitions</td>
-<td></td>
-<td></td>
-<td></td>
+<td>1</td>
+<td>integer</td>
+<td>Repetitions for sharing statistics</td>
 </tr>
 <tr>
 <td>xlinked_analysis</td>
