Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <p>Within Julia, use the package manager to install MendelKinship:</p>
 
-<pre><code>Pkg.clone("git@github.com:OpenMendel/MendelKinship.jl.git")
+<pre><code>Pkg.clone("https://github.com/OpenMendel/MendelKinship.jl.git")
 </code></pre>
 
 <p>This package supports Julia v0.4.</p>
